--- a/src/sa_web/locale/es/LC_MESSAGES/django.po
+++ b/src/sa_web/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Shareabouts Philly Bike Share\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-01-18 18:12-0500\n"
+"POT-Creation-Date: 2015-10-04 18:51-0400\n"
 "PO-Revision-Date: 2014-09-09 22:58+0000\n"
 "Last-Translator: Frank Hebbert <frank@openplans.org>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/projects/p/"
@@ -19,6 +19,43 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: sa_web/jstemplates/activity-list-item.html:1
+#, fuzzy
+#| msgid ""
+#| "<strong>\n"
+#| "\n"
+#| "        {{#if target.submitter}}\n"
+#| "          <img src=\"{{ target.submitter.avatar_url }}\" class=\"avatar"
+#| "\" /> {{ target.submitter.name }}\n"
+#| "        {{^}}\n"
+#| "          <!-- TODO: FIXME: don't hardcode image URL -->\n"
+#| "          <img src=\"/static/css/images/user-50.png\" class=\"avatar\" /> "
+#| "{{ target.submitter_name }}\n"
+#| "        {{/if}}\n"
+#| "        </strong>\n"
+#| "\n"
+#| "        {{#if is_place }}\n"
+#| "          {{ action }} a{{#if place.type_starts_with_vowel }}n{{/if }} "
+#| "<span class=\"place-type\">{{ place.place_type_label }}</span>\n"
+#| "          {{#if place.name }}\n"
+#| "            named <span class=\"place-name\">{{ place.name }}</span>\n"
+#| "          {{^}}\n"
+#| "            {{#if place.location }}\n"
+#| "              at <span class=\"place-name\">{{>location-string place."
+#| "location }}</span>\n"
+#| "            {{/if }}\n"
+#| "          {{/if }}\n"
+#| "        {{else}}\n"
+#| "          {{ action }}\n"
+#| "\n"
+#| "          {{#if place.name }}\n"
+#| "            <span class=\"place-name\">{{ place.name }}</span>\n"
+#| "          {{else}}\n"
+#| "            a{{# place.type_starts_with_vowel }}n{{/ place."
+#| "type_starts_with_vowel }} {{ place.place_type_label }}\n"
+#| "          {{/if }}\n"
+#| "\n"
+#| "        {{/if }}\n"
+#| "        "
 msgid ""
 "<strong>\n"
 "\n"
@@ -27,8 +64,8 @@ msgid ""
 "{{ target.submitter.name }}\n"
 "        {{^}}\n"
 "          <!-- TODO: FIXME: don't hardcode image URL -->\n"
-"          <img src=\"/static/css/images/user-50.png\" class=\"avatar\" /> "
-"{{ target.submitter_name }}\n"
+"          <img src=\"{{ STATIC_URL }}css/images/user-50.png\" class=\"avatar"
+"\" /> {{ target.submitter_name }}\n"
 "        {{/if}}\n"
 "        </strong>\n"
 "\n"
@@ -90,7 +127,7 @@ msgstr ""
 "\n"
 "        {{/if }}"
 
-#: sa_web/jstemplates/auth-nav.html:1 sa_web/jstemplates/place-form.html:3
+#: sa_web/jstemplates/auth-nav.html:1
 msgid "Log Out"
 msgstr "Cerrar sesión"
 
@@ -125,8 +162,8 @@ msgid ""
 "\" /> {{ submitter.name }}\n"
 "                    {{^}}\n"
 "                      <!-- TODO: FIXME: don't hardcode image URL -->\n"
-"                      <img src=\"/static/css/images/user-50.png\" class="
-"\"avatar\" /> {{ submitter_name }}\n"
+"                      <img src=\"{{ STATIC_URL }}css/images/user-50.png\" "
+"class=\"avatar\" /> {{ submitter_name }}\n"
 "                    {{/if}}\n"
 "                  </strong>\n"
 "                  <span class=\"response-date\">\n"
@@ -141,7 +178,7 @@ msgid ""
 "              {{#if submitter.avatar_url }}\n"
 "                <img src=\"{{ submitter.avatar_url }}\" class=\"avatar\" />\n"
 "              {{^}}\n"
-"                <img src=\"{{ STATIC_URL }}/css/images/user-50.png\" class="
+"                <img src=\"{{ STATIC_URL }}css/images/user-50.png\" class="
 "\"avatar\" />\n"
 "              {{/if}}\n"
 "              {{#if submitter.name }}\n"
@@ -161,37 +198,6 @@ msgid ""
 "            {{/if}}"
 msgstr ""
 
-#: sa_web/jstemplates/place-form.html:1
-msgid "Drag the map to your location."
-msgstr "Arrastra el mapa hasta tu ubicación"
-
-#: sa_web/jstemplates/place-form.html:2
-msgid ""
-"It looks like you didn't set your location yet. Please drag the map to your "
-"location."
-msgstr ""
-"Parece que no has fijado tu ubicación todavía. Por favor arrastra el mapa "
-"hasta tu ubicación."
-
-#: sa_web/jstemplates/place-form.html:4
-msgid ""
-"Or sign in with <a class=\"auth-inline twitter-btn\" href=\"/users/login/"
-"twitter/\">Twitter</a> <a class=\"auth-inline facebook-btn\" href=\"/users/"
-"login/facebook/\">Facebook</a>"
-msgstr ""
-"O inicia sesión con <a class=\"auth-inline twitter-btn\" href=\"/users/login/"
-"twitter/\">Twitter</a> <a class=\"auth-inline facebook-btn\" href=\"/users/"
-"login/facebook/\">Facebook</a>"
-
-#: sa_web/jstemplates/place-form.html:5
-msgid "Sorry, your browser doesn't support file uploads."
-msgstr "Lo lamentamos, tu navegador no permite cargas de archivos."
-
-#: sa_web/jstemplates/place-form.html:6
-#: sa_web/jstemplates/place-survey-form.html:1
-msgid "optional"
-msgstr "opcional"
-
 #: sa_web/jstemplates/place-list.html:1
 msgid "Most Recent"
 msgstr "Lo más reciente"
@@ -203,6 +209,10 @@ msgstr "Lo más {{ support_label_plural }}"
 #: sa_web/jstemplates/place-list.html:3
 msgid "Most {{ survey_label_plural }}"
 msgstr "Lo más {{ survey_label_plural }}"
+
+#: sa_web/jstemplates/place-survey-form.html:1
+msgid "optional"
+msgstr "opcional"
 
 #: sa_web/jstemplates/place-survey-response.html:1
 msgid "Thanks for participating!"
@@ -222,7 +232,7 @@ msgstr ""
 "<a href=\"http://browsehappy.com/\">actualiza tu navegador</a> para mejorar\n"
 "tu experiencia."
 
-#: sa_web/templates/base.html:85
+#: sa_web/templates/base.html:95
 #, python-format
 msgid ""
 "\n"
@@ -232,7 +242,7 @@ msgstr ""
 "\n"
 "Ups, %(config.app.name)s necesita JavaScript para funcionar correctamente."
 
-#: sa_web/templates/base.html:90
+#: sa_web/templates/base.html:100
 #, fuzzy, python-format
 #| msgid ""
 #| "\n"
@@ -257,7 +267,7 @@ msgstr ""
 "href=\"http://enable-javascript.com/\" target=\"_blank\">aquí</a> para ver "
 "unas instrucciones sencillas!"
 
-#: sa_web/templates/base.html:104
+#: sa_web/templates/base.html:114
 msgid ""
 "We can't connect to the server at the moment. Hang tight while we re-"
 "establish communication."
@@ -265,9 +275,31 @@ msgstr ""
 "No podemos conectarnos al servidor en este momento. Espera con calma "
 "mientras restablecemos la comunicación."
 
-#: sa_web/templates/base.html:113
+#: sa_web/templates/base.html:123
 msgid "Close"
 msgstr "Cerrar"
+
+#~ msgid "Drag the map to your location."
+#~ msgstr "Arrastra el mapa hasta tu ubicación"
+
+#~ msgid ""
+#~ "It looks like you didn't set your location yet. Please drag the map to "
+#~ "your location."
+#~ msgstr ""
+#~ "Parece que no has fijado tu ubicación todavía. Por favor arrastra el mapa "
+#~ "hasta tu ubicación."
+
+#~ msgid ""
+#~ "Or sign in with <a class=\"auth-inline twitter-btn\" href=\"/users/login/"
+#~ "twitter/\">Twitter</a> <a class=\"auth-inline facebook-btn\" href=\"/"
+#~ "users/login/facebook/\">Facebook</a>"
+#~ msgstr ""
+#~ "O inicia sesión con <a class=\"auth-inline twitter-btn\" href=\"/users/"
+#~ "login/twitter/\">Twitter</a> <a class=\"auth-inline facebook-btn\" href="
+#~ "\"/users/login/facebook/\">Facebook</a>"
+
+#~ msgid "Sorry, your browser doesn't support file uploads."
+#~ msgstr "Lo lamentamos, tu navegador no permite cargas de archivos."
 
 #~ msgid ""
 #~ "\n"
