--- a/src/flavors/duwamish_flavor/locale/vi/LC_MESSAGES/django.po
+++ b/src/flavors/duwamish_flavor/locale/vi/LC_MESSAGES/django.po
@@ -1,21 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# Translators:
+# Best Guest <translator@heyduwamish.org>, 2016
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: HeyDuwamish\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-07 06:34-0500\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2016-01-07 06:44-0500\n"
+"PO-Revision-Date: 2016-05-02 18:22-0700\n"
+"Last-Translator: Best Guest <translator@heyduwamish.org>\n"
+"Language-Team: Vietnamese (http://www.transifex.com/heyduwamish/heyduwamish/language/vi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: vi\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 #: flavors/duwamish_flavor/_config.translations.py:1
@@ -25,19 +25,19 @@ msgstr ""
 
 #: flavors/duwamish_flavor/_config.translations.py:2
 msgid "Community action"
-msgstr ""
+msgstr "Cộng Đồng Sẽ Hành Động"
 
 #: flavors/duwamish_flavor/_config.translations.py:3
 msgid "Places where pollution has been problematic"
-msgstr ""
+msgstr "Những Nơi Ô Nhiễm Đã Khó Giải Quyết"
 
 #: flavors/duwamish_flavor/_config.translations.py:4
 msgid "Areas of concern"
-msgstr ""
+msgstr "Khu Vực Quan Tâm"
 
 #: flavors/duwamish_flavor/_config.translations.py:5
 msgid "Land use data"
-msgstr ""
+msgstr "Dữ Liệu Sử Dụng Đất Đai"
 
 #: flavors/duwamish_flavor/_config.translations.py:6
 msgid "legend coming soon!"
@@ -45,7 +45,7 @@ msgstr ""
 
 #: flavors/duwamish_flavor/_config.translations.py:7
 msgid "Buildings"
-msgstr ""
+msgstr "Những Tòa Nhà"
 
 #: flavors/duwamish_flavor/_config.translations.py:8
 msgid "Land coverage data"
@@ -53,11 +53,11 @@ msgstr ""
 
 #: flavors/duwamish_flavor/_config.translations.py:9
 msgid "The original Duwamish River path"
-msgstr ""
+msgstr "Con Đường Sông Duwamish Trước Đó"
 
 #: flavors/duwamish_flavor/_config.translations.py:10
 msgid "Original river path"
-msgstr ""
+msgstr "Con Đường Sông Trước Đó"
 
 #: flavors/duwamish_flavor/_config.translations.py:11
 msgid ""
@@ -69,27 +69,27 @@ msgstr ""
 #: flavors/duwamish_flavor/_config.translations.py:25
 #: flavors/duwamish_flavor/_config.translations.py:48
 msgid "Someone"
-msgstr ""
+msgstr "Một Người Nào Đó"
 
 #: flavors/duwamish_flavor/_config.translations.py:13
 msgid "support"
-msgstr ""
+msgstr "ủng hộ"
 
 #: flavors/duwamish_flavor/_config.translations.py:14
 msgid "Support"
-msgstr ""
+msgstr "Ủng Hộ"
 
 #: flavors/duwamish_flavor/_config.translations.py:15
 msgid "supports"
-msgstr ""
+msgstr "ủng hộ"
 
 #: flavors/duwamish_flavor/_config.translations.py:16
 msgid "comments"
-msgstr ""
+msgstr "Bình Luận"
 
 #: flavors/duwamish_flavor/_config.translations.py:17
 msgid "commented on"
-msgstr ""
+msgstr "Bình Luận Về"
 
 #: flavors/duwamish_flavor/_config.translations.py:18
 #: flavors/duwamish_flavor/_config.translations.py:24
@@ -100,32 +100,32 @@ msgstr ""
 #: flavors/duwamish_flavor/_config.translations.py:20
 #: flavors/duwamish_flavor/_config.translations.py:22
 msgid "Comment"
-msgstr ""
+msgstr "Bình Luận"
 
 #: flavors/duwamish_flavor/_config.translations.py:21
 #: flavors/duwamish_flavor/_config.translations.py:40
 msgid "Your Name"
-msgstr ""
+msgstr "Tên Của Quý Vị"
 
 #: flavors/duwamish_flavor/_config.translations.py:23
 msgid "comment"
-msgstr ""
+msgstr "bình luận"
 
 #: flavors/duwamish_flavor/_config.translations.py:26
 msgid "Show the Map"
-msgstr ""
+msgstr "Trình Bày Bản Đồ"
 
 #: flavors/duwamish_flavor/_config.translations.py:27
 msgid "Put it on the map!"
-msgstr ""
+msgstr "Đặt Lên Trên Bản Đồ!"
 
 #: flavors/duwamish_flavor/_config.translations.py:28
 msgid "Tell us more..."
-msgstr ""
+msgstr "Hãy Cho Chúng Tôi Biết Thêm..."
 
 #: flavors/duwamish_flavor/_config.translations.py:29
 msgid "Type of report"
-msgstr ""
+msgstr "Loại Báo Cáo"
 
 #: flavors/duwamish_flavor/_config.translations.py:30
 #: flavors/duwamish_flavor/_config.translations.py:52
@@ -135,17 +135,17 @@ msgstr ""
 #: flavors/duwamish_flavor/_config.translations.py:31
 #: flavors/duwamish_flavor/_config.translations.py:49
 msgid "Question"
-msgstr ""
+msgstr "Câu Hỏi"
 
 #: flavors/duwamish_flavor/_config.translations.py:32
 #: flavors/duwamish_flavor/_config.translations.py:53
 msgid "Idea"
-msgstr ""
+msgstr "Ý Kiến"
 
 #: flavors/duwamish_flavor/_config.translations.py:33
 #: flavors/duwamish_flavor/_config.translations.py:50
 msgid "Complaint"
-msgstr ""
+msgstr "Lời Phàn Nàn"
 
 #: flavors/duwamish_flavor/_config.translations.py:34
 #: flavors/duwamish_flavor/_config.translations.py:51
@@ -155,7 +155,7 @@ msgstr ""
 
 #: flavors/duwamish_flavor/_config.translations.py:35
 msgid "Title of report"
-msgstr ""
+msgstr "Tiêu đề Của Báo Cáo"
 
 #: flavors/duwamish_flavor/_config.translations.py:36
 msgid "Enter title"
@@ -171,35 +171,35 @@ msgstr ""
 
 #: flavors/duwamish_flavor/_config.translations.py:39
 msgid "Name"
-msgstr ""
+msgstr "Tên"
 
 #: flavors/duwamish_flavor/_config.translations.py:41
 msgid "Receive email updates on your report"
-msgstr ""
+msgstr "Thường xuyên nhận email mới nhật về báo cáo của quý vị"
 
 #: flavors/duwamish_flavor/_config.translations.py:42
 msgid "Your Email"
-msgstr ""
+msgstr "Email Của Quý Vị"
 
 #: flavors/duwamish_flavor/_config.translations.py:43
 msgid "Image"
-msgstr ""
+msgstr "Hình Ảnh"
 
 #: flavors/duwamish_flavor/_config.translations.py:44
 msgid "Add an Image"
-msgstr ""
+msgstr "Bổ Sung Thêm Với Hình Ảnh"
 
 #: flavors/duwamish_flavor/_config.translations.py:45
 msgid "Add a report to the map!"
-msgstr ""
+msgstr "Bỏ Báo Cáo Lên Trên Bản Đồ!"
 
 #: flavors/duwamish_flavor/_config.translations.py:46
 msgid "created"
-msgstr ""
+msgstr "Báo Cáo Tạo Ra Trước Đây"
 
 #: flavors/duwamish_flavor/_config.translations.py:47
 msgid "See All Reports"
-msgstr ""
+msgstr "Xem Tất Cả Báo Cáo"
 
 #: flavors/duwamish_flavor/_config.translations.py:54
 msgid "Observations"
@@ -207,37 +207,37 @@ msgstr ""
 
 #: flavors/duwamish_flavor/_config.translations.py:55
 msgid "Ideas"
-msgstr ""
+msgstr "Ý Kiến"
 
 #: flavors/duwamish_flavor/_config.translations.py:56
 msgid "Questions"
-msgstr ""
+msgstr "Câu Hỏi"
 
 #: flavors/duwamish_flavor/_config.translations.py:57
 msgid "Complaints"
-msgstr ""
+msgstr "Lời Phàn Nàn"
 
 #: flavors/duwamish_flavor/_config.translations.py:59
 msgid "Report Types"
-msgstr ""
+msgstr "Báo Cáo Loại Gì"
 
 #: flavors/duwamish_flavor/_config.translations.py:60
 msgid "Map Layers"
-msgstr ""
+msgstr "Các Lớp Của Bản Đồ"
 
 #: flavors/duwamish_flavor/_config.translations.py:61
 msgid "About"
-msgstr ""
+msgstr "Mục Tiêu Về Dự Án Này"
 
 #: flavors/duwamish_flavor/_config.translations.py:62
 #: flavors/duwamish_flavor/jstemplates/pages/background.html:1
 msgid "Background"
-msgstr ""
+msgstr "Lý Lịch Về Dự Án Này"
 
 #: flavors/duwamish_flavor/_config.translations.py:63
 #: flavors/duwamish_flavor/jstemplates/pages/contribute.html:2
 msgid "Get involved"
-msgstr ""
+msgstr "Quý Vị Hãy Tham Gia"
 
 #: flavors/duwamish_flavor/_config.translations.py:64
 msgid "Green Screen"
@@ -254,7 +254,7 @@ msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/background.html:3
 msgid "Take me to the map!"
-msgstr ""
+msgstr "Quay trở lại bản đồ!"
 
 #: flavors/duwamish_flavor/jstemplates/pages/background.html:4
 msgid ""
@@ -280,17 +280,17 @@ msgid ""
 "The responsible parties named so far are Boeing Manufacturing, King County, "
 "the City of Seattle, and the Port of Seattle, with several more expected to "
 "be named over the coming years."
-msgstr ""
+msgstr "Các công ty hoặc những người gây ô nhiễm trong sông Duwamsih cần phải chịu trách nhiệm như là Boeing, Quận King, thành phố Seattle, Bến Cảng Seattle, và nhiều công ty khác sẽ chịu trách nhiệm sau khi chúng tôi xác định vai trò của họ với gây ô nhiễm trong sông Duwamish."
 
 #: flavors/duwamish_flavor/jstemplates/pages/background.html:7
 msgid ""
 "We hope that 'Hey Duwamish' can be used as a community monitoring system to "
 "help ensure that the $342 million is well spent. We want to restore the "
 "health of our watershed to its maximum potential and highlight the progress "
-"being made through initiatives such as the <a href=\"http://murray.seattle."
-"gov/murray-announces-funding-for-duwamish-river-community-projects"
-"\">Duwamish Opportunity Fund</a>."
-msgstr ""
+"being made through initiatives such as the <a "
+"href=\"http://murray.seattle.gov/murray-announces-funding-for-duwamish-"
+"river-community-projects\">Duwamish Opportunity Fund</a>."
+msgstr "Chúng tôi hy vọng trang web 'Hey Duwamish' có thể giúp cộng đồng theo dõi và giám sát những nguồn ô nhiễm để đảm bảo $342 triệu đô la Mỹ được sử dụng hợp lý. Chúng tôi muốn khôi phục lại thiên nhiên của lưu vực sông tối đa và làm nổi bật những tiến bộ đang được thực hiện từ các sáng kiến như  <a href=\"http://murray.seattle.gov/murray-announces-funding-for-duwamish-river-community-projects\">Duwamish Opportunity Fund</a>."
 
 #: flavors/duwamish_flavor/jstemplates/pages/contribute.html:1
 msgid ""
@@ -300,7 +300,7 @@ msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/contribute.html:3
 msgid "If you want to see a project like this in your community, let us know!"
-msgstr ""
+msgstr "Nếu quý vị muốn thấy ý kiến hoặc dự án như thế này trong cộng đồng của quý vị, cho chúng tôi biết!"
 
 #: flavors/duwamish_flavor/jstemplates/pages/contribute.html:4
 msgid ""
@@ -310,7 +310,7 @@ msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/contribute.html:5
 msgid "Want to help out? Excellent!"
-msgstr ""
+msgstr "Quý vị có muốn giúp chúng tôi Không? Nếu có thì là tuyệt vời!"
 
 #: flavors/duwamish_flavor/jstemplates/pages/contribute.html:6
 msgid ""
@@ -320,7 +320,7 @@ msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/features.html:1
 msgid "Features"
-msgstr ""
+msgstr "Chức Năng"
 
 #: flavors/duwamish_flavor/jstemplates/pages/features.html:2
 msgid "For designers and developers,"
@@ -328,11 +328,11 @@ msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/features.html:3
 msgid "For project managers during a project,"
-msgstr ""
+msgstr "Nếu quý vị cần tìm thông tin về những người quản lý một dự án nào đó thì xin vui lòng nhấn vào đây."
 
 #: flavors/duwamish_flavor/jstemplates/pages/features.html:4
 msgid "For users,"
-msgstr ""
+msgstr "Dành cho người sử dụng,"
 
 #: flavors/duwamish_flavor/jstemplates/pages/features.html:5
 msgid "a simple map interface, to explore submitted locations and add your own"
@@ -390,7 +390,7 @@ msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/overview.html:3
 msgid "Start Mapping!"
-msgstr ""
+msgstr "Bắt Đầu Đưa Thông Tin Vào Bản Đồ!"
 
 #: flavors/duwamish_flavor/jstemplates/pages/overview.html:4
 msgid ""
@@ -400,11 +400,11 @@ msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/overview.html:5
 msgid "Welcome"
-msgstr ""
+msgstr "Xin Chào Quý Vị"
 
 #: flavors/duwamish_flavor/jstemplates/pages/sponsors.html:1
 msgid "Back to the map"
-msgstr ""
+msgstr "Trở Lại Bản Đồ"
 
 #: flavors/duwamish_flavor/jstemplates/pages/sponsors.html:2
 msgid ""
@@ -415,7 +415,7 @@ msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/sponsors.html:3
 msgid "Sponsors"
-msgstr ""
+msgstr "Dự Án Này Được Tài Trợ Từ"
 
 #: flavors/duwamish_flavor/jstemplates/pages/youthcorps2015.html:1
 msgid "Duwamish Valley Youth Corps 2015"
