--- a/src/flavors/duwamish_flavor/locale/vi/LC_MESSAGES/django.po
+++ b/src/flavors/duwamish_flavor/locale/vi/LC_MESSAGES/django.po
@@ -61,8 +61,8 @@ msgstr "Con Đường Sông Trước Đó"
 
 #: flavors/duwamish_flavor/_config.translations.py:11
 msgid ""
-"Welcome! We are a community of residents and stakeholders who are monitoring "
-"the cleanup of toxic waste in Seattle's Duwamish River."
+"Welcome! We are a community of residents and stakeholders who are monitoring"
+" the cleanup of toxic waste in Seattle's Duwamish River."
 msgstr ""
 
 #: flavors/duwamish_flavor/_config.translations.py:12
@@ -248,8 +248,8 @@ msgid ""
 "In 2001, the US Environmental Protection Agency declared the lower 5 miles "
 "of the Duwamish to be a superfund site, which mandates a cleanup paid by "
 "those responsible for the pollution. After more than a decade of public "
-"deliberation, the EPA came to a final decision in December 2014, and ordered "
-"a $342 million cleanup to take place over the next 17 years."
+"deliberation, the EPA came to a final decision in December 2014, and ordered"
+" a $342 million cleanup to take place over the next 17 years."
 msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/background.html:3
@@ -259,8 +259,8 @@ msgstr "Quay trở lại bản đồ!"
 #: flavors/duwamish_flavor/jstemplates/pages/background.html:4
 msgid ""
 "The Duwamish River is Seattle's only river, and is one of the most polluted "
-"waterways in the US. After 100 years of urban industrialization, it contains "
-"more than 40 toxic chemicals above safe limits for humans and the "
+"waterways in the US. After 100 years of urban industrialization, it contains"
+" more than 40 toxic chemicals above safe limits for humans and the "
 "environment, including PCBs, dioxins, carcinogenic PAHs, and arsenic. "
 "Studies show that the low income communities living along the river have "
 "higher rates of heart disease, asthma, and other illnesses than other "
@@ -271,8 +271,8 @@ msgstr ""
 #: flavors/duwamish_flavor/jstemplates/pages/background.html:5
 msgid ""
 "The history here is rich. The Duwamish Tribe lived along the shores of this "
-"river for over 10,000 years, since the last ice age, until they were removed "
-"by incoming settlers who came about a century and a half ago."
+"river for over 10,000 years, since the last ice age, until they were removed"
+" by incoming settlers who came about a century and a half ago."
 msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/background.html:6
@@ -304,8 +304,8 @@ msgstr "Nếu quý vị muốn thấy ý kiến hoặc dự án như thế này 
 
 #: flavors/duwamish_flavor/jstemplates/pages/contribute.html:4
 msgid ""
-"The best way to be involved is to <a href=\"/place/new\">submit a report</a> "
-"on the map, or comment on someone else's report."
+"The best way to be involved is to <a href=\"/place/new\">submit a report</a>"
+" on the map, or comment on someone else's report."
 msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/contribute.html:5
@@ -314,8 +314,9 @@ msgstr "Quý vị có muốn giúp chúng tôi Không? Nếu có thì là tuyệ
 
 #: flavors/duwamish_flavor/jstemplates/pages/contribute.html:6
 msgid ""
-"We can also use help writing <a href=\"http://github.com/smartercleanup/"
-"duwamish\">code</a>, designing a better interface, and promoting the project."
+"We can also use help writing <a "
+"href=\"http://github.com/smartercleanup/duwamish\">code</a>, designing a "
+"better interface, and promoting the project."
 msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/features.html:1
@@ -335,7 +336,8 @@ msgid "For users,"
 msgstr "Dành cho người sử dụng,"
 
 #: flavors/duwamish_flavor/jstemplates/pages/features.html:5
-msgid "a simple map interface, to explore submitted locations and add your own"
+msgid ""
+"a simple map interface, to explore submitted locations and add your own"
 msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/features.html:6
@@ -354,8 +356,8 @@ msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/features.html:9
 msgid ""
-"geospatial database, so you can limit contributions to within boundaries, or "
-"asiggn neighborhood names"
+"geospatial database, so you can limit contributions to within boundaries, or"
+" asiggn neighborhood names"
 msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/pages/features.html:10
@@ -443,9 +445,9 @@ msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/place-form2.html:4
 msgid ""
-"Or sign in with <a class=\"auth-inline twitter-btn\" href=\"/users/login/"
-"twitter/\">Twitter</a> <a class=\"auth-inline facebook-btn\" href=\"/users/"
-"login/facebook/\">Facebook</a>"
+"Or sign in with <a class=\"auth-inline twitter-btn\" "
+"href=\"/users/login/twitter/\">Twitter</a> <a class=\"auth-inline facebook-"
+"btn\" href=\"/users/login/facebook/\">Facebook</a>"
 msgstr ""
 
 #: flavors/duwamish_flavor/jstemplates/place-form2.html:5
