--- a/src/sa_web/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/src/sa_web/locale/zh_Hans/LC_MESSAGES/django.po
@@ -8,11 +8,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-20 00:53-0800\n"
+"POT-Creation-Date: 2016-11-20 23:08-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Last-Translator: Luke Swart <luke@smartercleanup.org>, 2016\n"
+"Language-Team: Chinese (China) (https://www.transifex.com/heyduwamish/"
+"teams/58669/zh_CN/)\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -159,7 +160,7 @@ msgstr ""
 
 #: sa_web/jstemplates/place-form.html:5
 msgid "Set my location"
-msgstr ""
+msgstr "九月我的位置"
 
 #: sa_web/jstemplates/place-form.html:6
 msgid "Setting your location..."
