--- a/src/sa_web/locale/es/LC_MESSAGES/django.po
+++ b/src/sa_web/locale/es/LC_MESSAGES/django.po
@@ -3,16 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
+# Jacob <signup@futuresoup.com>, 2016
+# PB Project <frank+pbproject@openplans.org>, 2016
 msgid ""
 msgstr ""
-"Project-Id-Version: Shareabouts Philly Bike Share\n"
+"Project-Id-Version: HeyDuwamish\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-06 02:42-0500\n"
-"PO-Revision-Date: 2014-09-09 22:58+0000\n"
-"Last-Translator: Frank Hebbert <frank@openplans.org>\n"
-"Language-Team: Spanish (Mexico) (http://www.transifex.com/projects/p/"
-"shareabouts-philly-bike-share/language/es_MX/)\n"
-"Language: es_MX\n"
+"POT-Creation-Date: 2016-12-13 23:16-0500\n"
+"PO-Revision-Date: 2016-12-14 03:49+0000\n"
+"Last-Translator: Jacob <signup@futuresoup.com>\n"
+"Language-Team: Spanish (http://www.transifex.com/mapseed/heyduwamish/"
+"language/es/)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,7 +22,7 @@ msgstr ""
 
 #: flavors/snoqualmie/templates/index.html:56
 msgid "Powered by"
-msgstr ""
+msgstr "Impulsado por"
 
 #: sa_web/jstemplates/activity-list-item.html:1
 #, fuzzy
@@ -32,8 +34,8 @@ msgstr ""
 #| "\" /> {{ target.submitter.name }}\n"
 #| "        {{^}}\n"
 #| "          <!-- TODO: FIXME: don't hardcode image URL -->\n"
-#| "          <img src=\"/static/css/images/user-50.png\" class=\"avatar\" /> "
-#| "{{ target.submitter_name }}\n"
+#| "          <img src=\"{{ STATIC_URL }}css/images/user-50.png\" class="
+#| "\"avatar\" /> {{ target.submitter_name }}\n"
 #| "        {{/if}}\n"
 #| "        </strong>\n"
 #| "\n"
@@ -162,7 +164,7 @@ msgstr "Recomendar en Facebook"
 
 #: sa_web/jstemplates/place-detail-promotion-bar.html:2
 msgid "Tweet This"
-msgstr "Twittear Esto"
+msgstr "Twittear esto"
 
 #: sa_web/jstemplates/place-detail-survey.html:1
 msgid ""
@@ -222,9 +224,9 @@ msgstr ""
 
 #: sa_web/jstemplates/place-form.html:2
 #, fuzzy
-#| msgid "Drag the map to your location."
+#| msgid "First drag the map to set your pin's location."
 msgid "Or, drag the map to set your location"
-msgstr "Arrastra el mapa hasta tu ubicación"
+msgstr "Primero, arrastra el mapa para fijar la posición del marcador."
 
 #: sa_web/jstemplates/place-form.html:3
 msgid "Set my location"
@@ -253,7 +255,7 @@ msgstr "Lo más {{ survey_label_plural }}"
 
 #: sa_web/jstemplates/place-survey-response.html:1
 msgid "Thanks for participating!"
-msgstr "¡Gracías por su participación!"
+msgstr "¡Gracias por participar!"
 
 #: sa_web/jstemplates/unsupported-overlay.html:1
 msgid "Proceed Anyway"
@@ -280,15 +282,7 @@ msgstr ""
 "Ups, %(config.app.name)s necesita JavaScript para funcionar correctamente."
 
 #: sa_web/templates/base.html:118
-#, fuzzy, python-format
-#| msgid ""
-#| "\n"
-#| "        %(config.app.name)s is great but it needs something called "
-#| "JavaScript to work\n"
-#| "        properly. But fear not, it's really easy to turn on. Click\n"
-#| "        <a href=\"http://enable-javascript.com/\" target=\"_blank\">here</"
-#| "a> for simple instructions!\n"
-#| "        "
+#, python-format
 msgid ""
 "\n"
 "        %(config.app.name)s is great but it needs something called "
@@ -326,7 +320,7 @@ msgstr "Cerrar"
 #~ "\"/users/login/facebook/\">Facebook</a>"
 
 #~ msgid "Sorry, your browser doesn't support file uploads."
-#~ msgstr "Lo lamentamos, tu navegador no permite cargas de archivos."
+#~ msgstr "Lo sentimos, pero tu navegador no permite cargas de archivos."
 
 #~ msgid ""
 #~ "\n"
