--- a/src/flavors/pboakland/locale/zh_Hant/LC_MESSAGES/django.po
+++ b/src/flavors/pboakland/locale/zh_Hant/LC_MESSAGES/django.po
@@ -10,11 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-14 00:08-0500\n"
+"POT-Creation-Date: 2016-12-15 15:38-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Jacob <signup@futuresoup.com>, 2016\n"
-"Language-Team: Chinese Traditional (https://www.transifex.com/mapseed/"
-"teams/58669/zh-Hant/)\n"
+"Last-Translator: Language-Team: Chinese Traditional (https://www.transifex."
+"com/mapseed/teams/58669/zh-Hant/)\n"
 "Language: zh-Hant\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -153,7 +152,7 @@ msgstr "為什麼這很重要？該服務是社區裡需要的嗎？"
 #: flavors/pboakland/_config.translations.py:28
 #: flavors/pboakland/_config.translations.py:115
 msgid "Community Programs and Services"
-msgstr "社區計劃和服務"
+msgstr "社區專案和服務"
 
 #: flavors/pboakland/_config.translations.py:38
 msgid "Parks and Recreation"
@@ -420,10 +419,16 @@ msgid "Contact Us"
 msgstr "聯絡我們"
 
 #: flavors/pboakland/jstemplates/pages/getinvolved.html:4
+#, fuzzy
+#| msgid ""
+#| "Discuss your ideas in person with your neighbors at an upcoming "
+#| "Neighborhood Assembly! Assemblies will be held in late January and are "
+#| "currently being scheduled. Please sign up “Contact” form below to receive "
+#| "details."
 msgid ""
 "Discuss your ideas in person with your neighbors at an upcoming Neighborhood "
 "Assembly! Assemblies will be held in late January and are currently being "
-"scheduled. Please sign up “Contact” form below to receive details."
+"scheduled. Please sign up using the “Contact” form below to receive details."
 msgstr ""
 "即將到來的鄰居大會中與您的鄰居當面討論您的想法！大會將在1月下旬舉行，目前正在"
 "安排。請在下面登記「聯絡方式」表格獲得詳細資訊。"
