--- a/src/sa_web/locale/zh_Hant/LC_MESSAGES/django.po
+++ b/src/sa_web/locale/zh_Hant/LC_MESSAGES/django.po
@@ -1,25 +1,23 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: HeyDuwamish\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-07 06:44-0500\n"
+"POT-Creation-Date: 2016-12-15 15:38-0500\n"
 "PO-Revision-Date: 2016-12-14 04:10+0000\n"
-"Last-Translator: Jacob <signup@futuresoup.com>\n"
-"Language-Team: Chinese Traditional (http://www.transifex.com/mapseed/heyduwamish/language/zh-Hant/)\n"
+"Last-Translator: Language-Team: Chinese Traditional (http://www.transifex."
+"com/mapseed/heyduwamish/language/zh-Hant/)\n"
+"Language: zh-Hant\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh-Hant\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: flavors/georgetowngreen/templates/index.html:54
-#: flavors/happytrail/templates/index.html:55
-#: flavors/marra/templates/index.html:54 flavors/noise/templates/index.html:54
+#: flavors/snoqualmie/templates/index.html:56
 msgid "Powered by"
 msgstr ""
 
@@ -27,21 +25,31 @@ msgstr ""
 msgid ""
 "<strong>\n"
 "\n"
-"        {{#if target.submitter}}\n"
-"          <img src=\"{{ target.submitter.avatar_url }}\" class=\"avatar\" /> {{ target.submitter.name }}\n"
+"        {{#if target.submitter.avatar_url}}\n"
+"          <img src=\"{{ target.submitter.avatar_url }}\" class=\"avatar\" /"
+">\n"
 "        {{^}}\n"
-"          <!-- TODO: FIXME: don't hardcode image URL -->\n"
-"          <img src=\"{{ STATIC_URL }}css/images/user-50.png\" class=\"avatar\" /> {{ target.submitter_name }}\n"
+"          <img src=\"{{ STATIC_URL }}css/images/user-50.png\" class=\"avatar"
+"\" />\n"
 "        {{/if}}\n"
+"\n"
+"        {{#if target.submitter.name}}\n"
+"          {{ target.submitter.name }}\n"
+"        {{^}}\n"
+"          {{ target.submitter_name }}\n"
+"        {{/if}}\n"
+"\n"
 "        </strong>\n"
 "\n"
 "        {{#if is_place }}\n"
-"          {{ action }} a{{#if place.type_starts_with_vowel }}n{{/if }} <span class=\"place-type\">{{ place.place_type_label }}</span>\n"
+"          {{ action }} a{{#if place.type_starts_with_vowel }}n{{/if }} <span "
+"class=\"place-type\">{{ place.place_type_label }}</span>\n"
 "          {{#if place.name }}\n"
 "            named <span class=\"place-name\">{{ place.name }}</span>\n"
 "          {{^}}\n"
 "            {{#if place.location }}\n"
-"              at <span class=\"place-name\">{{>location-string place.location }}</span>\n"
+"              at <span class=\"place-name\">{{>location-string place."
+"location }}</span>\n"
 "            {{/if }}\n"
 "          {{/if }}\n"
 "        {{else}}\n"
@@ -50,23 +58,25 @@ msgid ""
 "          {{#if place.name }}\n"
 "            <span class=\"place-name\">{{ place.name }}</span>\n"
 "          {{else}}\n"
-"            a{{# place.type_starts_with_vowel }}n{{/ place.type_starts_with_vowel }} {{ place.place_type_label }}\n"
+"            a{{# place.type_starts_with_vowel }}n{{/ place."
+"type_starts_with_vowel }} {{ place.place_type_label }}\n"
 "          {{/if }}\n"
 "\n"
 "        {{/if }}\n"
 "        "
 msgstr ""
 
-#: sa_web/jstemplates/auth-nav.html:1 sa_web/jstemplates/place-form.html:3
+#: sa_web/jstemplates/auth-nav.html:1
 msgid "Log Out"
-msgstr ""
+msgstr "註銷"
 
 #: sa_web/jstemplates/auth-nav.html:2
 msgid "Sign In"
-msgstr ""
+msgstr "登記"
 
 #: sa_web/jstemplates/auth-nav.html:3
-msgid "Signed in as</span> <span class=\"current-user\">{{ current_user \"name\" }}"
+msgid ""
+"Signed in as</span> <span class=\"current-user\">{{ current_user \"name\" }}"
 msgstr ""
 
 #: sa_web/jstemplates/geocode-address.html:1
@@ -85,10 +95,12 @@ msgstr ""
 msgid ""
 "<strong class=\"response-submitter\">\n"
 "                    {{#if submitter}}\n"
-"                      <img src=\"{{ submitter.avatar_url }}\" class=\"avatar\" /> {{ submitter.name }}\n"
+"                      <img src=\"{{ submitter.avatar_url }}\" class=\"avatar"
+"\" /> {{ submitter.name }}\n"
 "                    {{^}}\n"
 "                      <!-- TODO: FIXME: don't hardcode image URL -->\n"
-"                      <img src=\"{{ STATIC_URL }}css/images/user-50.png\" class=\"avatar\" /> {{ submitter_name }}\n"
+"                      <img src=\"{{ STATIC_URL }}css/images/user-50.png\" "
+"class=\"avatar\" /> {{ submitter_name }}\n"
 "                    {{/if}}\n"
 "                  </strong>\n"
 "                  <span class=\"response-date\">\n"
@@ -103,7 +115,8 @@ msgid ""
 "              {{#if submitter.avatar_url }}\n"
 "                <img src=\"{{ submitter.avatar_url }}\" class=\"avatar\" />\n"
 "              {{^}}\n"
-"                <img src=\"{{ STATIC_URL }}css/images/user-50.png\" class=\"avatar\" />\n"
+"                <img src=\"{{ STATIC_URL }}css/images/user-50.png\" class="
+"\"avatar\" />\n"
 "              {{/if}}\n"
 "              {{#if submitter.name }}\n"
 "                {{ submitter.name }}\n"
@@ -114,42 +127,44 @@ msgid ""
 "                  {{ anonymous_name }}\n"
 "                {{/if}}\n"
 "              {{/if}}\n"
-"            </strong> {{ action_text }} this {{ place_type_label location_type}}\n"
+"            </strong> {{ action_text }} this {{ place_type_label "
+"location_type}}\n"
 "\n"
 "            {{#if region}}\n"
 "              in {{ region }}\n"
 "            {{/if}}"
 msgstr ""
 
-#: sa_web/jstemplates/place-form.html:1
-msgid "First drag the map to set your pin's location."
+#: sa_web/jstemplates/place-form-field-types.html:1
+msgid "Select..."
 msgstr ""
 
-#: sa_web/jstemplates/place-form.html:2
+#: sa_web/jstemplates/place-form.html:1
 msgid ""
 "It looks like you didn't set your location yet. Please drag the map to your "
 "location."
-msgstr ""
+msgstr "您似乎尚未設置自己的位置。請拖動地圖以設置您的位置"
+
+#: sa_web/jstemplates/place-form.html:2
+msgid "Or, drag the map to set your location"
+msgstr "拖拽地圖來設置您的位置"
+
+#: sa_web/jstemplates/place-form.html:3
+msgid "Set my location"
+msgstr "設置我的位置"
 
 #: sa_web/jstemplates/place-form.html:4
-msgid ""
-"Or sign in with <a class=\"auth-inline twitter-btn\" "
-"href=\"/users/login/twitter/\">Twitter</a> <a class=\"auth-inline facebook-"
-"btn\" href=\"/users/login/facebook/\">Facebook</a>"
-msgstr ""
+msgid "Setting your location..."
+msgstr "設置您的位置"
 
 #: sa_web/jstemplates/place-form.html:5
-msgid "Sorry, your browser doesn't support file uploads."
-msgstr ""
-
-#: sa_web/jstemplates/place-form.html:6
 #: sa_web/jstemplates/place-survey-form.html:1
 msgid "optional"
 msgstr ""
 
 #: sa_web/jstemplates/place-list.html:1
 msgid "Most Recent"
-msgstr ""
+msgstr "最近的"
 
 #: sa_web/jstemplates/place-list.html:2
 msgid "Most {{ support_label_plural }}"
@@ -174,7 +189,7 @@ msgid ""
 "    your experience."
 msgstr ""
 
-#: sa_web/templates/base.html:97
+#: sa_web/templates/base.html:113
 #, python-format
 msgid ""
 "\n"
@@ -182,39 +197,45 @@ msgid ""
 "        "
 msgstr ""
 
-#: sa_web/templates/base.html:102
+#: sa_web/templates/base.html:118
 #, python-format
 msgid ""
 "\n"
-"        %(config.app.name)s is great but it needs something called JavaScript to work\n"
+"        %(config.app.name)s is great but it needs something called "
+"JavaScript to work\n"
 "        properly. But fear not, it's really easy to turn on. Click\n"
-"        <a href=\"//enable-javascript.com/\" target=\"_blank\">here</a> for simple instructions!\n"
+"        <a href=\"//enable-javascript.com/\" target=\"_blank\">here</a> for "
+"simple instructions!\n"
 "        "
 msgstr ""
 
-#: sa_web/templates/base.html:116
+#: sa_web/templates/base.html:133
 msgid ""
 "We can't connect to the server at the moment. Hang tight while we re-"
 "establish communication."
 msgstr ""
 
-#: sa_web/templates/base.html:125
+#: sa_web/templates/base.html:144
 msgid "Close"
 msgstr ""
 
 #~ msgid ""
 #~ "\n"
 #~ "    App Name is not officially supported in {{browser.name}}\n"
-#~ "    {{browser.version}}. Things may not work. Or they may, we're not sure. If\n"
+#~ "    {{browser.version}}. Things may not work. Or they may, we're not "
+#~ "sure. If\n"
 #~ "    you want to be safe, we suggest using one of <a\n"
-#~ "    href=\"http://upgradeyourbrowser.net/\" target=\"_blank\">these</a> instead.\n"
+#~ "    href=\"http://upgradeyourbrowser.net/\" target=\"_blank\">these</a> "
+#~ "instead.\n"
 #~ "    "
 #~ msgstr ""
 #~ "\n"
 #~ "Shareabouts is not officially supported in {{browser.name}}\n"
-#~ "    {{browser.version}}. Things may not work. Or they may, we're not sure. If\n"
+#~ "    {{browser.version}}. Things may not work. Or they may, we're not "
+#~ "sure. If\n"
 #~ "    you want to be safe, we suggest using one of <a\n"
-#~ "    href=\"http://upgradeyourbrowser.net/\" target=\"_blank\">these</a> instead.\n"
+#~ "    href=\"http://upgradeyourbrowser.net/\" target=\"_blank\">these</a> "
+#~ "instead.\n"
 #~ "    "
 
 #~ msgid "Close Button"
