more language tweaks

--- a/src/flavors/pboakland/locale/es/LC_MESSAGES/django.po
+++ b/src/flavors/pboakland/locale/es/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-13 23:16-0500\n"
+"POT-Creation-Date: 2016-12-15 23:56-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: PB Project <frank+pbproject@openplans.org>, 2016\n"
 "Language-Team: Spanish (https://www.transifex.com/mapseed/teams/58669/es/)\n"
@@ -430,10 +430,16 @@ msgid "Contact Us"
 msgstr "Contacto"
 
 #: flavors/pboakland/jstemplates/pages/getinvolved.html:4
+#, fuzzy
+#| msgid ""
+#| "Discuss your ideas in person with your neighbors at an upcoming "
+#| "Neighborhood Assembly! Assemblies will be held in late January and are "
+#| "currently being scheduled. Please sign up “Contact” form below to receive "
+#| "details."
 msgid ""
 "Discuss your ideas in person with your neighbors at an upcoming Neighborhood "
 "Assembly! Assemblies will be held in late January and are currently being "
-"scheduled. Please sign up “Contact” form below to receive details."
+"scheduled. Please sign up using the “Contact” form below to receive details."
 msgstr ""
 "Comenta tus ideas en persona con tus vecinos en una asamblea comunitaria "
 "próximamente. Las asambleas se celebrarán a finales de enero y se están "
