--- a/src/flavors/pboakland/locale/zh_Hant/LC_MESSAGES/django.po
+++ b/src/flavors/pboakland/locale/zh_Hant/LC_MESSAGES/django.po
@@ -435,7 +435,7 @@ msgid ""
 msgstr ""
 "有很多方式可以參與奧克蘭的PB活動！您可以幫助把資訊傳遞給地區居民，促進小組會"
 "議舉行，為PB活動提供支援等。登記<a href=\"http://www.123contactform.com/"
-"form-2317799/My-Form\">here</a>。"
+"form-2317799/PB-Oakland-Volunteer-Sign-Up\">這裡</a>。"
 
 #: flavors/pboakland/jstemplates/pages/getinvolved.html:8
 msgid "Volunteer"
