--- a/src/sa_web/locale/es/LC_MESSAGES/django.po
+++ b/src/sa_web/locale/es/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HeyDuwamish\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-21 00:00-0500\n"
+"POT-Creation-Date: 2016-12-21 02:53-0500\n"
 "PO-Revision-Date: 2016-12-14 03:49+0000\n"
 "Last-Translator: Jacob <signup@futuresoup.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/mapseed/heyduwamish/"
@@ -220,16 +220,16 @@ msgid "Select..."
 msgstr ""
 
 #: sa_web/jstemplates/place-form.html:1
+msgid "First, drag the map to set your location"
+msgstr "Primero, arrastra el mapa para fijar la posición del marcador."
+
+#: sa_web/jstemplates/place-form.html:2
 msgid ""
 "It looks like you didn't set your location yet. Please drag the map to your "
 "location."
 msgstr ""
 "Parece que no has fijado tu ubicación todavía. Por favor arrastra el mapa "
 "hasta tu ubicación."
-
-#: sa_web/jstemplates/place-form.html:2
-msgid "Or, drag the map to set your location"
-msgstr "Primero, arrastra el mapa para fijar la posición del marcador."
 
 #: sa_web/jstemplates/place-form.html:3
 msgid "Set my location"
