--- a/src/flavors/pboakland/locale/es/LC_MESSAGES/django.po
+++ b/src/flavors/pboakland/locale/es/LC_MESSAGES/django.po
@@ -1,134 +1,21 @@
+#: flavors/pboakland/_config.translations.py:66
+#: flavors/pboakland/_config.translations.py:98
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-01-09 23:07-0500\n"
+"POT-Creation-Date: 2017-01-10 16:44-0500\n"
 "PO-Revision-Date: 2017-01-10 04:18+0000\n"
 "Last-Translator: PB Project <frank+pbproject@openplans.org>, 2016\n"
 "Language-Team: Spanish (https://www.transifex.com/mapseed/teams/58669/es/)\n"
 "Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Loco-Source-Locale: en_US\n"
 "X-Loco-Parser: loco_parse_po\n"
-"X-Generator: Loco - https://localise.biz/"
-
-#: flavors/pboakland/_config.translations.py:20 
-#: flavors/pboakland/_config.translations.py:24 
-#: flavors/pboakland/_config.translations.py:26 
-#: flavors/pboakland/_config.translations.py:27 
-#: flavors/pboakland/_config.translations.py:30 
-#: flavors/pboakland/_config.translations.py:34 
-#: flavors/pboakland/_config.translations.py:36 
-#: flavors/pboakland/_config.translations.py:37 
-#: flavors/pboakland/_config.translations.py:40 
-#: flavors/pboakland/_config.translations.py:44 
-#: flavors/pboakland/_config.translations.py:46 
-#: flavors/pboakland/_config.translations.py:47 
-#: flavors/pboakland/_config.translations.py:50 
-#: flavors/pboakland/_config.translations.py:54 
-#: flavors/pboakland/_config.translations.py:56 
-#: flavors/pboakland/_config.translations.py:57
-msgid " "
-msgstr ""
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:1
-msgid ""
-"<a href=\"https://participatorybudgeting.nationbuilder.com/r?"
-"u=https%3A%2F%2Fdocs.google."
-"com%2Fforms%2Fd%2Fe%2F1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=6&test_email=1\""
-">RSVP for the assembly here!</a>"
-msgstr ""
-"<a href=\"https://participatorybudgeting.nationbuilder.com/r?"
-"u=https%3A%2F%2Fdocs.google."
-"com%2Fforms%2Fd%2Fe%2F1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=6&test_email=1\""
-">¡Confirme su asistencia a la asamblea aquí!</a>"
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:2
-msgid ""
-"<h4>Assembly 1</h4>\n"
-"<strong>Wednesday, January 25th\n"
-"6:00 pm - 8:00 pm</strong>\n"
-"<br>Asian Cultural Center\n"
-"<a href=\"https://participatorybudgeting.nationbuilder.com/r?"
-"u=https%3A%2F%2Fwww.google."
-"com%2Fmaps%2Fplace%2FOakland%2BAsian%2BCultural%2BCenter%2F%4037.8004548%2C-"
-"122."
-"2738912%2C17z%2Fdata%3D%214m5%213m4%211s0x808f80b67f1b9b13%3A0xd8fb3880e03d5091%218m2%213d37"
-".8004548%214d-122."
-"2717025&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=2&test_email=1\""
-"><br>388 9th Street, Suite 290\n"
-"<br>Oakland, CA 94607</a>\n"
-"<br>English/Chinese Translation"
-msgstr ""
-"<h4>Asamblea 1</h4>\n"
-"\n"
-"<strong>Miércoles, 25 de enero 6:00 pm - 8:00 pm</strong>\n"
-"<br>Centro Cultural Asiático\n"
-"<a href=\"https://participatorybudgeting.nationbuilder.com/r?"
-"u=https%3A%2F%2Fwww.google."
-"com%2Fmaps%2Fplace%2FOakland%2BAsian%2BCultural%2BCenter%2F%4037.8004548%2C-"
-"122."
-"2738912%2C17z%2Fdata%3D%214m5%213m4%211s0x808f80b67f1b9b13%3A0xd8fb3880e03d5091%218m2%213d37"
-".8004548%214d-122."
-"2717025&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=2&test_email=1\""
-">\n"
-"<br>388 9th Street, Suite 290\n"
-"<br>Oakland, CA 94607</a>\n"
-"<br>Traducción en inglés/chino"
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:9
-msgid ""
-"<h4>Assembly 2</h4>\n"
-"<strong>Thursday, January 26th 6:00 pm - 8:00 pm</strong>\n"
-"<br>Williams Chapel\n"
-"<a href=\"https://participatorybudgeting.nationbuilder.com/r?"
-"u=https%3A%2F%2Fwww.google."
-"com%2Fmaps%2Fplace%2FWilliams%2BChapel%2BBaptist%2BChurch%2F%4037.792124%2C-"
-"122."
-"2513913%2C17z%2Fdata%3D%213m1%214b1%214m5%213m4%211s0x808f87246c4dce49%3A0x75f519425c5dafab%218m2%213d37"
-".792124%214d-122."
-"249208&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=4&test_email=1\""
-"><br>1410 10th St.\n"
-"<br>Oakland, CA 94606</a>\n"
-"<br>English/Spanish Translation"
-msgstr ""
-"<h4>Asamblea 2</h4>\n"
-"\n"
-"<strong>Jueves, 26 de enero 6:00 pm - 8:00 pm</strong>\n"
-"<br>Williams Chapel\n"
-"<a href=\"https://participatorybudgeting.nationbuilder.com/r?"
-"u=https%3A%2F%2Fwww.google."
-"com%2Fmaps%2Fplace%2FWilliams%2BChapel%2BBaptist%2BChurch%2F%4037.792124%2C-"
-"122."
-"2513913%2C17z%2Fdata%3D%213m1%214b1%214m5%213m4%211s0x808f87246c4dce49%3A0x75f519425c5dafab%218m2%213d37"
-".792124%214d-122."
-"249208&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=4&test_email=1\""
-">\n"
-"<br>1410 10th St.\n"
-"<br>Oakland, CA 94606</a>\n"
-"<br>Traducción en inglés/español"
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:18
-msgid "Attend an upcoming assembly</a> to share your ideas."
-msgstr " ¡Asiste a una próxima asamblea</a> para compartir tus ideas!"
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:20
-msgid ""
-"Discuss your ideas in person with your neighbors at an upcoming Neighborhood "
-"Assembly! "
-msgstr ""
-"¡Comenta tus ideas en persona con tus vecinos en una asamblea comunitaria "
-"próximamente!"
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:24
-msgid ""
-"This is a FREE event! Food, activities for children and translation will be "
-"provided!"
-msgstr ""
-"Hazte VOLUNTARIO ayúdanos a hacer de PB todo un éxito registrándote aquí."
+"X-Generator: Loco - https://localise.biz/\n"
 
 #: flavors/pboakland/_config.translations.py:1
 msgid ""
@@ -141,8 +28,8 @@ msgstr ""
 "del Concejo Municipal el poder de decidir cómo invertir una serie de fondos "
 "municipales en su distrito. ¡Ayúdanos a votar hoy mismo!"
 
-#: flavors/pboakland/_config.translations.py:2 
-#: flavors/pboakland/_config.translations.py:15 
+#: flavors/pboakland/_config.translations.py:2
+#: flavors/pboakland/_config.translations.py:15
 #: flavors/pboakland/_config.translations.py:101
 msgid "Someone"
 msgstr "Alguien"
@@ -167,13 +54,13 @@ msgstr "comentarios"
 msgid "commented on"
 msgstr "comentó en"
 
-#: flavors/pboakland/_config.translations.py:8 
+#: flavors/pboakland/_config.translations.py:8
 #: flavors/pboakland/_config.translations.py:14
 msgid "Leave a Comment"
 msgstr "Dejar un comentario"
 
-#: flavors/pboakland/_config.translations.py:9 
-#: flavors/pboakland/_config.translations.py:10 
+#: flavors/pboakland/_config.translations.py:9
+#: flavors/pboakland/_config.translations.py:10
 #: flavors/pboakland/_config.translations.py:12
 msgid "Comment"
 msgstr "Comentario"
@@ -198,30 +85,49 @@ msgstr "¡Enviar!"
 msgid "Tell us more..."
 msgstr "Cuéntanos más..."
 
-#: flavors/pboakland/_config.translations.py:19 
-#: flavors/pboakland/_config.translations.py:29 
-#: flavors/pboakland/_config.translations.py:39 
+#: flavors/pboakland/_config.translations.py:19
+#: flavors/pboakland/_config.translations.py:29
+#: flavors/pboakland/_config.translations.py:39
 #: flavors/pboakland/_config.translations.py:49
 msgid "Title of your idea:"
 msgstr "Título de tu idea:"
 
-#: flavors/pboakland/_config.translations.py:21 
-#: flavors/pboakland/_config.translations.py:31 
-#: flavors/pboakland/_config.translations.py:41 
+#: flavors/pboakland/_config.translations.py:20
+#: flavors/pboakland/_config.translations.py:24
+#: flavors/pboakland/_config.translations.py:26
+#: flavors/pboakland/_config.translations.py:27
+#: flavors/pboakland/_config.translations.py:30
+#: flavors/pboakland/_config.translations.py:34
+#: flavors/pboakland/_config.translations.py:36
+#: flavors/pboakland/_config.translations.py:37
+#: flavors/pboakland/_config.translations.py:40
+#: flavors/pboakland/_config.translations.py:44
+#: flavors/pboakland/_config.translations.py:46
+#: flavors/pboakland/_config.translations.py:47
+#: flavors/pboakland/_config.translations.py:50
+#: flavors/pboakland/_config.translations.py:54
+#: flavors/pboakland/_config.translations.py:56
+#: flavors/pboakland/_config.translations.py:57
+msgid " "
+msgstr ""
+
+#: flavors/pboakland/_config.translations.py:21
+#: flavors/pboakland/_config.translations.py:31
+#: flavors/pboakland/_config.translations.py:41
 #: flavors/pboakland/_config.translations.py:51
 msgid "Title:"
 msgstr "Título:"
 
-#: flavors/pboakland/_config.translations.py:22 
-#: flavors/pboakland/_config.translations.py:32 
-#: flavors/pboakland/_config.translations.py:42 
+#: flavors/pboakland/_config.translations.py:22
+#: flavors/pboakland/_config.translations.py:32
+#: flavors/pboakland/_config.translations.py:42
 #: flavors/pboakland/_config.translations.py:52
 msgid "Tell us more about your idea to improve our neighborhood?:"
 msgstr "Cuéntanos más detalles sobre tu idea para mejorar nuestra comunidad:"
 
-#: flavors/pboakland/_config.translations.py:23 
-#: flavors/pboakland/_config.translations.py:33 
-#: flavors/pboakland/_config.translations.py:43 
+#: flavors/pboakland/_config.translations.py:23
+#: flavors/pboakland/_config.translations.py:33
+#: flavors/pboakland/_config.translations.py:43
 #: flavors/pboakland/_config.translations.py:53
 msgid ""
 "Ideas must be for a program, service, or infrastructure improvement "
@@ -231,15 +137,15 @@ msgstr ""
 "infraestructural que beneficie a comunidades de ingresos escasos a moderados "
 "dentro del distrito."
 
-#: flavors/pboakland/_config.translations.py:25 
-#: flavors/pboakland/_config.translations.py:35 
-#: flavors/pboakland/_config.translations.py:45 
+#: flavors/pboakland/_config.translations.py:25
+#: flavors/pboakland/_config.translations.py:35
+#: flavors/pboakland/_config.translations.py:45
 #: flavors/pboakland/_config.translations.py:55
 msgid "Why is this important? What need in the community does this serve?:"
 msgstr ""
 "¿Por qué es importante? ¿Qué necesidad de la comunidad atiende tu idea?"
 
-#: flavors/pboakland/_config.translations.py:28 
+#: flavors/pboakland/_config.translations.py:28
 #: flavors/pboakland/_config.translations.py:115
 msgid "Community Programs and Services"
 msgstr "Programas y Servicios Comunitarios"
@@ -252,7 +158,7 @@ msgstr "Parques y recreación"
 msgid "Streets and Sidewalk"
 msgstr "Calles y aceras "
 
-#: flavors/pboakland/_config.translations.py:58 
+#: flavors/pboakland/_config.translations.py:58
 #: flavors/pboakland/_config.translations.py:118
 msgid "Housing and Jobs"
 msgstr "Vivienda y empleos"
@@ -382,7 +288,7 @@ msgstr "Sí"
 msgid "No"
 msgstr "No"
 
-#: flavors/pboakland/_config.translations.py:90 
+#: flavors/pboakland/_config.translations.py:90
 #: flavors/pboakland/_config.translations.py:91
 msgid "I want to volunteer:"
 msgstr "Me gustaría ser voluntario:"
@@ -487,15 +393,82 @@ msgstr "Ideas de la comunidad:"
 msgid "About"
 msgstr "Información"
 
-#: flavors/pboakland/_config.translations.py:121 
+#: flavors/pboakland/_config.translations.py:121
 #: flavors/pboakland/jstemplates/pages/guidelines.html:3
 msgid "Guidelines"
 msgstr "Pautas"
 
-#: flavors/pboakland/_config.translations.py:122 
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:21
+#: flavors/pboakland/_config.translations.py:122
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:20
 msgid "Get more involved"
 msgstr "Otras maneras de participar"
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:1
+msgid ""
+"<a href=\"https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F"
+"%2Fdocs.google.com%2Fforms%2Fd%2Fe"
+"%2F1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew"
+"%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=6&test_email=1\">RSVP "
+"for the assembly here!</a>"
+msgstr ""
+"<a href=\"https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F"
+"%2Fdocs.google.com%2Fforms%2Fd%2Fe"
+"%2F1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew"
+"%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=6&test_email=1\">¡Confirme "
+"su asistencia a la asamblea aquí!</a>"
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:2
+msgid ""
+"<h4>Assembly 1</h4>\n"
+"<strong>Wednesday, January 25th\n"
+"6:00 pm - 8:00 pm</strong>\n"
+"<br>Asian Cultural Center\n"
+"<a href=\"https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F"
+"%2Fwww.google.com%2Fmaps%2Fplace%2FOakland%2BAsian%2BCultural%2BCenter%2F"
+"%4037.8004548%2C-122.2738912%2C17z%2Fdata%3D"
+"%214m5%213m4%211s0x808f80b67f1b9b13%3A0xd8fb3880e03d5091%218m2%213d37.8004548%214d-122.2717025&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=2&test_email=1\"><br>388 "
+"9th Street, Suite 290\n"
+"<br>Oakland, CA 94607</a>\n"
+"<br>English/Chinese Translation"
+msgstr ""
+"<h4>Asamblea 1</h4>\n"
+"\n"
+"<strong>Miércoles, 25 de enero 6:00 pm - 8:00 pm</strong>\n"
+"<br>Centro Cultural Asiático\n"
+"<a href=\"https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F"
+"%2Fwww.google.com%2Fmaps%2Fplace%2FOakland%2BAsian%2BCultural%2BCenter%2F"
+"%4037.8004548%2C-122.2738912%2C17z%2Fdata%3D"
+"%214m5%213m4%211s0x808f80b67f1b9b13%3A0xd8fb3880e03d5091%218m2%213d37.8004548%214d-122.2717025&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=2&test_email=1\">\n"
+"<br>388 9th Street, Suite 290\n"
+"<br>Oakland, CA 94607</a>\n"
+"<br>Traducción en inglés/chino"
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:9
+msgid ""
+"<h4>Assembly 2</h4>\n"
+"<strong>Thursday, January 26th 6:00 pm - 8:00 pm</strong>\n"
+"<br>Williams Chapel\n"
+"<a href=\"https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F"
+"%2Fwww.google.com%2Fmaps%2Fplace%2FWilliams%2BChapel%2BBaptist%2BChurch%2F"
+"%4037.792124%2C-122.2513913%2C17z%2Fdata%3D"
+"%213m1%214b1%214m5%213m4%211s0x808f87246c4dce49%3A0x75f519425c5dafab"
+"%218m2%213d37.792124%214d-122.249208&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=4&test_email=1\"><br>1410 "
+"10th Ave.\n"
+"<br>Oakland, CA 94606</a>\n"
+"<br>English/Spanish Translation"
+msgstr ""
+"<h4>Asamblea 2</h4>\n"
+"\n"
+"<strong>Jueves, 26 de enero 6:00 pm - 8:00 pm</strong>\n"
+"<br>Williams Chapel\n"
+"<a href=\"https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F"
+"%2Fwww.google.com%2Fmaps%2Fplace%2FWilliams%2BChapel%2BBaptist%2BChurch%2F"
+"%4037.792124%2C-122.2513913%2C17z%2Fdata%3D"
+"%213m1%214b1%214m5%213m4%211s0x808f87246c4dce49%3A0x75f519425c5dafab"
+"%218m2%213d37.792124%214d-122.249208&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=4&test_email=1\">\n"
+"<br>1410 10th Ave.\n"
+"<br>Oakland, CA 94606</a>\n"
+"<br>Traducción en inglés/español"
 
 #: flavors/pboakland/jstemplates/pages/getinvolved.html:15
 msgid ""
@@ -517,15 +490,37 @@ msgstr ""
 msgid "Attend a Neighborhood Assembly"
 msgstr "Asistir a una asamblea comunitaria"
 
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:19
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:18
 msgid "Contact Us"
 msgstr "Contacto"
 
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:22
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:19
+#, fuzzy
+#| msgid ""
+#| "<a href=\"https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F"
+#| "%2Fdocs.google.com%2Fforms%2Fd%2Fe"
+#| "%2F1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew"
+#| "%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=6&test_email=1\">RSVP "
+#| "for the assembly here!</a>"
+msgid ""
+"Discuss your ideas in person with your neighbors at an upcoming Neighborhood "
+"Assembly! <a href=\"https://participatorybudgeting.nationbuilder.com/r?"
+"u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe"
+"%2F1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew"
+"%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=1&test_email=1\">Attend "
+"an upcoming assembly</a> to share your ideas."
+msgstr ""
+"<a href=\"https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F"
+"%2Fdocs.google.com%2Fforms%2Fd%2Fe"
+"%2F1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew"
+"%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=6&test_email=1\">¡Confirme "
+"su asistencia a la asamblea aquí!</a>"
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:21
 msgid "Have a question? Feel free to contact us."
 msgstr "¿Tienes alguna pregunta? Te invitamos a comunicarte con nosotros."
 
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:23
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:22
 msgid ""
 "There are lots of ways to get involved in PB in Oakland! You can help to get "
 "the word out to district residents, facilitate small group meetings, provide "
@@ -538,7 +533,14 @@ msgstr ""
 "href=\"http://www.123contactform.com/form-2373917/PB-Oakland-Volunteer-"
 "Spanish\" target=\"_blank\">aquí</a>."
 
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:25
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:23
+msgid ""
+"This is a FREE event! Food, activities for children and translation will be "
+"provided!"
+msgstr ""
+"Hazte VOLUNTARIO ayúdanos a hacer de PB todo un éxito registrándote aquí."
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:24
 msgid "Volunteer"
 msgstr "Voluntario"
 
@@ -579,8 +581,8 @@ msgstr ""
 #: flavors/pboakland/jstemplates/pages/overview.html:2
 msgid ""
 "For more information on the City of Oakland’s Community Development Block "
-"Grant (CDBG) program, click <a href=\"http://www2.oaklandnet."
-"com/government/o/hcd/s/CDBG/index.htm\" target=”_blank”>here</a>."
+"Grant (CDBG) program, click <a href=\"http://www2.oaklandnet.com/government/"
+"o/hcd/s/CDBG/index.htm\" target=”_blank”>here</a>."
 msgstr ""
 "Si deseas obtener más información sobre la subvención de desarrollo urbano  "
 "Community Development Block Grant (CDBG) de la ciudad de Oakland, haz clic "
@@ -633,3 +635,13 @@ msgstr ""
 #: flavors/pboakland/templates/index.html:54
 msgid "Powered by"
 msgstr "Con el respaldo de"
+
+#~ msgid "Attend an upcoming assembly</a> to share your ideas."
+#~ msgstr " ¡Asiste a una próxima asamblea</a> para compartir tus ideas!"
+
+#~ msgid ""
+#~ "Discuss your ideas in person with your neighbors at an upcoming "
+#~ "Neighborhood Assembly! "
+#~ msgstr ""
+#~ "¡Comenta tus ideas en persona con tus vecinos en una asamblea comunitaria "
+#~ "próximamente!"
