language bug fix on rail

--- a/src/flavors/pboakland/locale/zh_Hant/LC_MESSAGES/django.po
+++ b/src/flavors/pboakland/locale/zh_Hant/LC_MESSAGES/django.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-03-24 19:32-0400\n"
+"POT-Creation-Date: 2017-03-30 00:44-0400\n"
 "PO-Revision-Date: 2017-02-22 05:52+0000\n"
 "Last-Translator: Language-Team: Chinese Traditional (https://www.transifex."
 "com/mapseed/teams/58669/zh-Hant/)\n"
@@ -540,8 +540,8 @@ msgid ""
 "\n"
 "<a href=\"http://www2.oaklandnet.com/oakca1/groups/ceda/documents/policy/"
 "oak062978.pdf\"><h2>The results are in!</h2></a>\n"
-"<strong><em>You made it happen: here are your PB Oakland priorities winners:"
-"</em></strong>\n"
+"<strong><em>You made it happen: here are your PB Oakland priorities winners</"
+"em></strong>\n"
 msgstr ""
 
 #: flavors/pboakland/jstemplates/pages/overview.html:5
